// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectedSystemsTable should render correctly 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <Connect(SystemsTable)
        hasInventoryReadPermissions={true}
      >
        <SystemsTable
          driftClearFilters={[Function]}
          hasInventoryReadPermissions={true}
          selectEntities={[Function]}
          selectHistoricProfiles={[Function]}
          selectedSystemIds={Array []}
          setSelectedSystemIds={[Function]}
          updateColumns={[Function]}
        >
          <ForwardRef
            bulkSelect={
              Object {
                "checked": null,
                "count": 0,
                "isDisabled": true,
                "items": Array [
                  Object {
                    "onClick": [Function],
                    "title": "Select none (0)",
                  },
                  Object {
                    "onClick": [Function],
                    "title": "Select page (0)",
                  },
                ],
                "onSelect": [Function],
              }
            }
            customFilters={
              Object {
                "filter": Object {
                  "system_profile": Object {},
                },
                "tags": undefined,
              }
            }
            fallback={
              <Bullseye>
                <Spinner
                  size="xl"
                />
              </Bullseye>
            }
            noDetail={true}
            onLoad={[Function]}
            showTags={true}
            tableProps={
              Object {
                "canSelectAll": false,
                "ouiaId": "systems-table",
                "selectVariant": undefined,
              }
            }
          >
            <BaseInvTable
              bulkSelect={
                Object {
                  "checked": null,
                  "count": 0,
                  "isDisabled": true,
                  "items": Array [
                    Object {
                      "onClick": [Function],
                      "title": "Select none (0)",
                    },
                    Object {
                      "onClick": [Function],
                      "title": "Select page (0)",
                    },
                  ],
                  "onSelect": [Function],
                }
              }
              customFilters={
                Object {
                  "filter": Object {
                    "system_profile": Object {},
                  },
                  "tags": undefined,
                }
              }
              fallback={
                <Bullseye>
                  <Spinner
                    size="xl"
                  />
                </Bullseye>
              }
              innerRef={null}
              noDetail={true}
              onLoad={[Function]}
              showTags={true}
              tableProps={
                Object {
                  "canSelectAll": false,
                  "ouiaId": "systems-table",
                  "selectVariant": undefined,
                }
              }
            >
              <Suspense
                fallback={
                  <Bullseye>
                    <Spinner
                      size="xl"
                    />
                  </Bullseye>
                }
              >
                <ForwardRef
                  ErrorComponent={
                    <UNDEFINED
                      bulkSelect={
                        Object {
                          "checked": null,
                          "count": 0,
                          "isDisabled": true,
                          "items": Array [
                            Object {
                              "onClick": [Function],
                              "title": "Select none (0)",
                            },
                            Object {
                              "onClick": [Function],
                              "title": "Select page (0)",
                            },
                          ],
                          "onSelect": [Function],
                        }
                      }
                      component="InventoryTable"
                      customFilters={
                        Object {
                          "filter": Object {
                            "system_profile": Object {},
                          },
                          "tags": undefined,
                        }
                      }
                      fallback={
                        <Bullseye>
                          <Spinner
                            size="xl"
                          />
                        </Bullseye>
                      }
                      innerRef={null}
                      noDetail={true}
                      onLoad={[Function]}
                      showTags={true}
                      tableProps={
                        Object {
                          "canSelectAll": false,
                          "ouiaId": "systems-table",
                          "selectVariant": undefined,
                        }
                      }
                    />
                  }
                  appName="chrome"
                  bulkSelect={
                    Object {
                      "checked": null,
                      "count": 0,
                      "isDisabled": true,
                      "items": Array [
                        Object {
                          "onClick": [Function],
                          "title": "Select none (0)",
                        },
                        Object {
                          "onClick": [Function],
                          "title": "Select page (0)",
                        },
                      ],
                      "onSelect": [Function],
                    }
                  }
                  customFilters={
                    Object {
                      "filter": Object {
                        "system_profile": Object {},
                      },
                      "tags": undefined,
                    }
                  }
                  fallback={
                    <Bullseye>
                      <Spinner
                        size="xl"
                      />
                    </Bullseye>
                  }
                  history={
                    Object {
                      "action": "POP",
                      "block": [Function],
                      "canGo": [Function],
                      "createHref": [Function],
                      "entries": Array [
                        Object {
                          "hash": "",
                          "pathname": "/",
                          "search": "",
                          "state": undefined,
                        },
                      ],
                      "go": [Function],
                      "goBack": [Function],
                      "goForward": [Function],
                      "index": 0,
                      "length": 1,
                      "listen": [Function],
                      "location": Object {
                        "hash": "",
                        "pathname": "/",
                        "search": "",
                        "state": undefined,
                      },
                      "push": [Function],
                      "replace": [Function],
                    }
                  }
                  innerRef={null}
                  module="./InventoryTable"
                  noDetail={true}
                  onLoad={[Function]}
                  scope="chrome"
                  showTags={true}
                  store={
                    Object {
                      "clearActions": [Function],
                      "dispatch": [Function],
                      "getActions": [Function],
                      "getState": [Function],
                      "replaceReducer": [Function],
                      "subscribe": [Function],
                    }
                  }
                  tableProps={
                    Object {
                      "canSelectAll": false,
                      "ouiaId": "systems-table",
                      "selectVariant": undefined,
                    }
                  }
                >
                  <BaseScalprumComponent
                    ErrorComponent={
                      <UNDEFINED
                        bulkSelect={
                          Object {
                            "checked": null,
                            "count": 0,
                            "isDisabled": true,
                            "items": Array [
                              Object {
                                "onClick": [Function],
                                "title": "Select none (0)",
                              },
                              Object {
                                "onClick": [Function],
                                "title": "Select page (0)",
                              },
                            ],
                            "onSelect": [Function],
                          }
                        }
                        component="InventoryTable"
                        customFilters={
                          Object {
                            "filter": Object {
                              "system_profile": Object {},
                            },
                            "tags": undefined,
                          }
                        }
                        fallback={
                          <Bullseye>
                            <Spinner
                              size="xl"
                            />
                          </Bullseye>
                        }
                        innerRef={null}
                        noDetail={true}
                        onLoad={[Function]}
                        showTags={true}
                        tableProps={
                          Object {
                            "canSelectAll": false,
                            "ouiaId": "systems-table",
                            "selectVariant": undefined,
                          }
                        }
                      />
                    }
                    appName="chrome"
                    bulkSelect={
                      Object {
                        "checked": null,
                        "count": 0,
                        "isDisabled": true,
                        "items": Array [
                          Object {
                            "onClick": [Function],
                            "title": "Select none (0)",
                          },
                          Object {
                            "onClick": [Function],
                            "title": "Select page (0)",
                          },
                        ],
                        "onSelect": [Function],
                      }
                    }
                    customFilters={
                      Object {
                        "filter": Object {
                          "system_profile": Object {},
                        },
                        "tags": undefined,
                      }
                    }
                    fallback={
                      <Bullseye>
                        <Spinner
                          size="xl"
                        />
                      </Bullseye>
                    }
                    history={
                      Object {
                        "action": "POP",
                        "block": [Function],
                        "canGo": [Function],
                        "createHref": [Function],
                        "entries": Array [
                          Object {
                            "hash": "",
                            "pathname": "/",
                            "search": "",
                            "state": undefined,
                          },
                        ],
                        "go": [Function],
                        "goBack": [Function],
                        "goForward": [Function],
                        "index": 0,
                        "length": 1,
                        "listen": [Function],
                        "location": Object {
                          "hash": "",
                          "pathname": "/",
                          "search": "",
                          "state": undefined,
                        },
                        "push": [Function],
                        "replace": [Function],
                      }
                    }
                    innerRef={null}
                    module="./InventoryTable"
                    noDetail={true}
                    onLoad={[Function]}
                    scope="chrome"
                    showTags={true}
                    store={
                      Object {
                        "clearActions": [Function],
                        "dispatch": [Function],
                        "getActions": [Function],
                        "getState": [Function],
                        "replaceReducer": [Function],
                        "subscribe": [Function],
                      }
                    }
                    tableProps={
                      Object {
                        "canSelectAll": false,
                        "ouiaId": "systems-table",
                        "selectVariant": undefined,
                      }
                    }
                  />
                </ForwardRef>
                <Bullseye>
                  <div
                    className="pf-l-bullseye"
                  >
                    <Spinner
                      size="xl"
                    >
                      <span
                        aria-valuetext="Loading..."
                        className="pf-c-spinner pf-m-xl"
                        role="progressbar"
                      >
                        <span
                          className="pf-c-spinner__clipper"
                        />
                        <span
                          className="pf-c-spinner__lead-ball"
                        />
                        <span
                          className="pf-c-spinner__tail-ball"
                        />
                      </span>
                    </Spinner>
                  </div>
                </Bullseye>
              </Suspense>
            </BaseInvTable>
          </ForwardRef>
        </SystemsTable>
      </Connect(SystemsTable)>
    </Provider>
  </Router>
</MemoryRouter>
`;

exports[`ConnectedSystemsTable should render radio correctly 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <Connect(SystemsTable)
        hasInventoryReadPermissions={true}
      >
        <SystemsTable
          driftClearFilters={[Function]}
          hasInventoryReadPermissions={true}
          selectEntities={[Function]}
          selectHistoricProfiles={[Function]}
          selectedSystemIds={Array []}
          setSelectedSystemIds={[Function]}
          updateColumns={[Function]}
        >
          <Spinner
            size="lg"
          >
            <span
              aria-valuetext="Loading..."
              className="pf-c-spinner pf-m-lg"
              role="progressbar"
            >
              <span
                className="pf-c-spinner__clipper"
              />
              <span
                className="pf-c-spinner__lead-ball"
              />
              <span
                className="pf-c-spinner__tail-ball"
              />
            </span>
          </Spinner>
        </SystemsTable>
      </Connect(SystemsTable)>
    </Provider>
  </Router>
</MemoryRouter>
`;
